# escapi

./: .gitignore  CMakeLists.txt  compileproto.bat  escapi.sln
escapi_dll/: escapi_dll.vcxproj
ogl/: ogl.vcxproj
ogl_eCAL/: main.cpp  ogl_eCAL.vcxproj
python/: webcam_sub.py
